added partials for headers and footers
- created headers.ejs
- created footers.ejs
- included them in the other .ejs files

--- a/V1/views/campgrounds.ejs
+++ b/V1/views/campgrounds.ejs
@@ -1,3 +1,5 @@
+<% include partials/headers %>
+
 <h1>this is camp grounds.</h1>
 
     <% campGrounds.forEach(function(camp){ %>
@@ -6,3 +8,5 @@
         <img src="<%= camp.img %>" alt="photo of <%= camp.name %>">
       </div>
     <% }); %>
+
+<% include partials/footers %>
