added <a>'s to go to and from /campgrounds and /campgrounds/new

--- a/V1/views/campgrounds.ejs
+++ b/V1/views/campgrounds.ejs
@@ -2,6 +2,8 @@
 
 <h1>this is camp grounds.</h1>
 
+<a href="/campgrounds/new">add a new camp</a>
+
     <% campGrounds.forEach(function(camp){ %>
       <div>
         <h3><%= camp.name %></h3>
