--- a/V1/views/campgrounds.ejs
+++ b/V1/views/campgrounds.ejs
@@ -1,14 +1,35 @@
 <% include partials/headers %>
 
-<h1>this is camp grounds.</h1>
+<div class="container">
 
-<a href="/campgrounds/new">add a new camp</a>
+    <header class="jumbotron">
+        <div class="container">
+            <h1>this is camp grounds.</h1>
+            <p>view our camps from Gazorpazorp</p>
+            <p>
+                <a class="btn btn-primary btn-md" href="/campgrounds/new">add a new camp</a>
+            </p>
+        </div>
+    </header>
 
-    <% campGrounds.forEach(function(camp){ %>
-      <div>
-        <h3><%= camp.name %></h3>
-        <img src="<%= camp.img %>" alt="photo of <%= camp.name %>">
-      </div>
-    <% }); %>
+    <div class="row text-center" style="display: flex; flex-wrap: wrap">
+        <% campGrounds.forEach(function(camp){ %>
+        <div class="col-md-3 col-sm-6">
+
+            <div class="thumbnail">
+                <img src="<%= camp.img %>" alt="photo of <%= camp.name %>">
+
+                <div class="caption">
+                        <h3><%= camp.name %></h3>
+                    </div>
+
+            </div>
+
+        </div>
+        <% }); %>
+    </div>
+
+</div>
+
 
 <% include partials/footers %>
