GET:/campgrounds now references the DB + commented out Camp.create (to not create more camps)

--- a/V2/views/campgrounds.ejs
+++ b/V2/views/campgrounds.ejs
@@ -13,7 +13,7 @@
     </header>
 
     <div class="row text-center" style="display: flex; flex-wrap: wrap">
-        <% campGrounds.forEach(function(camp){ %>
+        <% camps.forEach(function(camp){ %>
         <div class="col-md-3 col-sm-6">
 
             <div class="thumbnail">
