--- a/V2/views/index.ejs
+++ b/V2/views/index.ejs
@@ -22,7 +22,9 @@
                 <div class="caption">
                         <h3><%= camp.name %></h3>
                     </div>
-
+                    <p>
+                        <a href="/campgrounds/<%= camp._id %>" class="btn btn-primary">more info.</a>
+                    </p>
             </div>
 
         </div>
