added descripition field in POST:/campgrounds + added corresponding field in new.ejs + modified show.ejs to show more details

--- a/V2/views/show.ejs
+++ b/V2/views/show.ejs
@@ -1,3 +1,9 @@
-<h1>The show template</h1>
+<% include partials/headers %>
 
-<p><%= camp.name %></p>
+<h1><%= camp.name %></h1>
+
+<img src="<%= camp.img %>" alt="">
+
+<p><%= camp.description %></p>
+
+<% include partials/footers %>
