--- a/V2/views/new.ejs
+++ b/V2/views/new.ejs
@@ -15,6 +15,10 @@
                 </div>
 
                 <div class="form-group">
+                    <input class="form-control" type="text" placeholder="description" name="description">
+                </div>
+
+                <div class="form-group">
                     <button class="btn btn-lg btn-default btn-block btn-primary">submit</button>
                 </div>
 
