--- a/V2/views/show.ejs
+++ b/V2/views/show.ejs
@@ -6,4 +6,10 @@
 
 <p><%= camp.description %></p>
 
+<% camp.comments.forEach(function(comment){ %>
+    <p>
+        <strong><%= comment.author %></strong> - <%= comment.text %>
+    </p>
+<% }) %>
+
 <% include partials/footers %>
