moved files in views in /camps & /comments + more ...

--- a/V2/views/camps/index.ejs
+++ b/V2/views/camps/index.ejs
@@ -1,4 +1,4 @@
-<% include partials/headers %>
+<% include ../partials/headers %>
 
 <div class="container">
 
@@ -34,4 +34,4 @@
 </div>
 
 
-<% include partials/footers %>
+<% include ../partials/footers %>
