--- a/V2/views/camps/new.ejs
+++ b/V2/views/camps/new.ejs
@@ -1,4 +1,4 @@
-<% include partials/headers %>
+<% include ../partials/headers %>
 
 <div class="container">
     <div class="row">
@@ -34,4 +34,4 @@
 
 
 
-<% include partials/footers %>
+<% include ../partials/footers %>
