--- a/V2/views/camps/show.ejs
+++ b/V2/views/camps/show.ejs
@@ -1,4 +1,4 @@
-<% include partials/headers %>
+<% include ../partials/headers %>
 
 <h1><%= camp.name %></h1>
 
@@ -12,4 +12,4 @@
     </p>
 <% }) %>
 
-<% include partials/footers %>
+<% include ../partials/footers %>
