--- a/V2/views/camps/show.ejs
+++ b/V2/views/camps/show.ejs
@@ -6,6 +6,10 @@
 
 <p><%= camp.description %></p>
 
+<p>
+    <a class="btn btn-success" href="/campgrounds/<%= camp._id %>/comments/new">Add comments</a>
+</p>
+
 <% camp.comments.forEach(function(comment){ %>
     <p>
         <strong><%= comment.author %></strong> - <%= comment.text %>
