--- a/V2/views/camps/show.ejs
+++ b/V2/views/camps/show.ejs
@@ -16,9 +16,32 @@
                 <img class="img-responsive" src="<%= camp.img %>" alt="">
                 <div class="caption-full">
                     <h4 class="pull-right">$PRICE</h4>
-                    <h4><a href=""><%= camp.name %></a></h4>
-                    <p><%= camp.description %></p>
+                    <h4><a href="">
+                            <%= camp.name %></a></h4>
+                    <p>
+                        <%= camp.description %>
+                    </p>
                 </div>
+            </div>
+            <div class="well">
+                <div class="text-right">
+                    <a class="btn btn-success" href="/campgrounds/<%= camp._id %>/comments/new">Add comments</a>
+                </div>
+                <hr>
+                <% camp.comments.forEach(function(comment){ %>
+                <div class="row">
+                    <div class="col-md-12">
+                        <strong>
+                            <%= comment.author %>
+                        </strong>
+                        <span class="pull-right">X DAYS AGO</span>
+                        <p>
+                            <%= comment.text %>
+                        </p>
+                    </div>
+                </div>
+
+                <% }) %>
             </div>
         </div>
     </div>
@@ -30,15 +53,5 @@
 
 
 
-
-<p>
-    <a class="btn btn-success" href="/campgrounds/<%= camp._id %>/comments/new">Add comments</a>
-</p>
-
-<% camp.comments.forEach(function(comment){ %>
-    <p>
-        <strong><%= comment.author %></strong> - <%= comment.text %>
-    </p>
-<% }) %>
 
 <% include ../partials/footers %>
