renamed all campGrounds -> camps + GET:/logout + new func isLoggedIn() to use as middleware

--- a/V2/views/camps/index.ejs
+++ b/V2/views/camps/index.ejs
@@ -7,7 +7,7 @@
             <h1>this is camp grounds.</h1>
             <p>view our camps from Gazorpazorp</p>
             <p>
-                <a class="btn btn-primary btn-md" href="/campgrounds/new">add a new camp</a>
+                <a class="btn btn-primary btn-md" href="/camps/new">add a new camp</a>
             </p>
         </div>
     </header>
@@ -23,7 +23,7 @@
                         <h3><%= camp.name %></h3>
                     </div>
                     <p>
-                        <a href="/campgrounds/<%= camp._id %>" class="btn btn-primary">more info.</a>
+                        <a href="/camps/<%= camp._id %>" class="btn btn-primary">more info.</a>
                     </p>
             </div>
 
