--- a/V2/views/camps/new.ejs
+++ b/V2/views/camps/new.ejs
@@ -5,7 +5,7 @@
         <h1 style="text-align: center;">Create new camp ground</h1>
 
         <div style="width: 30%; margin: 30px auto">
-            <form action="/campgrounds" method="POST">
+            <form action="/camps" method="POST">
                 <div class="form-group">
                     <input class="form-control" type="text" placeholder="name" name="name">
                 </div>
@@ -24,7 +24,7 @@
 
             </form>
 
-            <a href="/campgrounds">back to camp grounds.</a>
+            <a href="/camps">back to camp grounds.</a>
         </div>
 
 
