--- a/V2/views/camps/show.ejs
+++ b/V2/views/camps/show.ejs
@@ -25,7 +25,7 @@
             </div>
             <div class="well">
                 <div class="text-right">
-                    <a class="btn btn-success" href="/campgrounds/<%= camp._id %>/comments/new">Add comments</a>
+                    <a class="btn btn-success" href="/camps/<%= camp._id %>/comments/new">Add comments</a>
                 </div>
                 <hr>
                 <% camp.comments.forEach(function(comment){ %>
