--- a/V2/views/landing.ejs
+++ b/V2/views/landing.ejs
@@ -4,6 +4,6 @@
 
 <p>yeah, this is it.</p>
 
-<a href="/campgrounds">view campgrounds.</a>
+<a href="/camps">view camps.</a>
 
 <% include partials/footers %>
