--- a/V2/views/login.ejs
+++ b/V2/views/login.ejs
@@ -1,3 +1,5 @@
+<% include ./partials/headers %>
+
 <h1>LOGIN</h1>
 
 <form action="/login" method="POST">
@@ -5,3 +7,5 @@
     <input type="text" placeholder="password" name="password">
     <input type="submit" value="login">
 </form>
+
+<% include ./partials/footers %>
