--- a/V2/views/partials/headers.ejs
+++ b/V2/views/partials/headers.ejs
@@ -16,9 +16,9 @@
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="/">login</a></li>
-                    <li><a href="/">sign up</a></li>
-                    <li><a href="/">logout</a></li>
+                    <li><a href="/login">login</a></li>
+                    <li><a href="/register">sign up</a></li>
+                    <li><a href="/logout">logout</a></li>
                 </ul>
             </div>
         </div>
