--- a/V2/views/register.ejs
+++ b/V2/views/register.ejs
@@ -1,3 +1,5 @@
+<% include ./partials/headers %>
+
 <h1>REGISTER PAGE</h1>
 
 <form action="/register" method="POST">
@@ -5,3 +7,5 @@
     <input type="text" placeholder="password" name="password">
     <button>sign up</button>
 </form>
+
+<% include ./partials/footers %>
