--- a/V2/views/camps/show.ejs
+++ b/V2/views/camps/show.ejs
@@ -32,7 +32,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <strong>
-                            <%= comment.author %>
+                            <%= comment.author.username %>
                         </strong>
                         <span class="pull-right">X DAYS AGO</span>
                         <p>
