made pages accessible only to users logged in (comments etc.)

--- a/V2/views/camps/show.ejs
+++ b/V2/views/camps/show.ejs
@@ -21,6 +21,11 @@
                     <p>
                         <%= camp.description %>
                     </p>
+                    <p>
+                        <em>
+                            <%= camp.author.username %>
+                        </em>
+                    </p>
                 </div>
             </div>
             <div class="well">
