--- a/V2/views/camps/show.ejs
+++ b/V2/views/camps/show.ejs
@@ -26,6 +26,7 @@
                             <%= camp.author.username %>
                         </em>
                     </p>
+                    <a class="btn btn-warning" href="/camps/<%= camp._id %>/edit">edit</a>
                 </div>
             </div>
             <div class="well">
