added DELETE:/camps/:id + minor styling

--- a/V2/views/camps/show.ejs
+++ b/V2/views/camps/show.ejs
@@ -27,6 +27,9 @@
                         </em>
                     </p>
                     <a class="btn btn-warning" href="/camps/<%= camp._id %>/edit">edit</a>
+                    <form id="delete-form" action="/camps/<%= camp._id %>?_method=DELETE" method="POST">
+                        <button class="btn btn-danger">Delete</button>
+                    </form>
                 </div>
             </div>
             <div class="well">
