--- a/V2/views/camps/show.ejs
+++ b/V2/views/camps/show.ejs
@@ -50,12 +50,14 @@
                         <p>
                             <%= comment.text %>
                         </p>
+                        <% if(currentUser && comment.author.id.equals(currentUser._id)) { %>
                         <a href="/camps/<%= camp._id %>/comments/<%= comment._id %>/edit" class="btn btn-xs btn-warning">
                             edit
                         </a>
                         <form class="delete-form" action="/camps/<%= camp._id %>/comments/<%= comment._id %>?_method=DELETE" method="POST">
                             <input class="btn btn-xs btn-danger" value="delete" type="submit">
                         </form>
+                        <% } %>
                     </div>
                 </div>
                 <% }) %>
