added more flash messages

--- a/V2/views/login.ejs
+++ b/V2/views/login.ejs
@@ -4,7 +4,7 @@
 
 <form action="/login" method="POST">
     <input type="text" placeholder="username" name="username">
-    <input type="text" placeholder="password" name="password">
+    <input type="password" placeholder="password" name="password">
     <input type="submit" value="login">
 </form>
 
