added price to Camp and overhaul of landing page

--- a/V2/views/camps/show.ejs
+++ b/V2/views/camps/show.ejs
@@ -15,7 +15,7 @@
             <div class="thumbnail">
                 <img class="img-responsive" src="<%= camp.img %>" alt="">
                 <div class="caption-full">
-                    <h4 class="pull-right">$PRICE</h4>
+                    <h4 class="pull-right">$<%= camp.price%>/night</h4>
                     <h4><a href="">
                             <%= camp.name %></a></h4>
                     <p>
