--- a/V2/views/camps/new.ejs
+++ b/V2/views/camps/new.ejs
@@ -19,6 +19,10 @@
                 </div>
 
                 <div class="form-group">
+                    <input class="form-control" type="number" placeholder="price" name="price" min="0.00" step="0.01">
+                </div>
+
+                <div class="form-group">
                     <button class="btn btn-lg btn-default btn-block btn-primary">submit</button>
                 </div>
 
